--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,14 @@
       "dom"
     ]
   },
-  // "angularCompilerOptions": {
-  //   "enableI18nLegacyMessageIdFormat": false,
-  //   "strictInjectionParameters": true,
-  //   "strictInputAccessModifiers": true,
-  //   "strictTemplates": true
-  // }
+  "angularCompilerOptions": {
+    // "enableI18nLegacyMessageIdFormat": false,
+    // "strictInjectionParameters": true,
+    // "strictInputAccessModifiers": true,
+    // "strictTemplates": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+
+
+  }
 }
